--- a/src/main/resources/templates/opening-hours.mustache
+++ b/src/main/resources/templates/opening-hours.mustache
@@ -3,7 +3,7 @@
 <ul>
     {{#data}}
     <li>
-        {{dayOfWeek}}: {{openingHours}}
+        {{dayOfWeek}}: {{openingHoursRange}}
     </li>
     {{/data}}
 </ul>
